tests/sources/invalid/types/semantic_operator_errors.fire
// Semantic type errors for binary operators (-, *, /, **, &&, ||, %).

int32 sub_mismatch() {
    int32 a = 5;
    float64 b = 2.0;
    int32 c = a - b;  //~ ERROR FS-SEM-0010 @17
    return c;
}
